# Dragonhorse

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt  Makefile  definitions.h  evaluate.cpp  evaluate.h  main.cpp  options.cpp  options.h  search.cpp  uci.cpp  uci.h
src/chess/: bitboard.cpp  bitboard.h  move.cpp  move.h  movegen.cpp  position.cpp  position.h  score.h
src/mcts/: mcts.cpp  mcts.h
src/utils/: controller.h  tt.h  utils.h
